# NeoRank

./: .gitignore  CITATION.cff  COMMIT_AND_PUSH.md  CONTRIBUTING.md  LICENSE  README.md  SETUP_COMPLETE.md  environment.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: ci.yml
data/: README.md
data/example/: example_epitope.tsv  example_peptides.csv  example_tcell.tsv
data/raw/: download_instructions.md
docs/: FAQ.md  api_reference.md  feature_documentation.md  installation.md  usage_guide.md
models/: README.md
neorank/: __init__.py  cli.py
notebooks/: 01_data_exploration.ipynb
results/: README.md
scripts/: benchmark_comparison.py  predict_neoantigens.py  predict_neorank.py  train_model.py  train_neorank.py
src/: __init__.py  config.py  data_preprocessing.py  feature_extraction.py
tests/: __init__.py  test_feature_extraction.py  test_features.py  test_integration_smoke.py  test_model.py  test_preprocessing.py
tools/: README.md  netmhcpan_setup.md
