[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "neorank"
version = "0.1.0"
description = "Neoantigen immunogenicity prediction (NeoRank)"
readme = "README.md"
license = { file = "LICENSE" }
authors = [ { name = "Eddy Ma" } ]
requires-python = ">=3.8"

[tool.setuptools.packages.find]
where = ["."]
include = ["neorank", "neorank.*"]
