[metadata]
name = neorank
version = 0.1.0
description = Neoantigen immunogenicity prediction (NeoRank)
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT

[options]
packages = find:
install_requires =
    pandas>=1.5.0
    numpy>=1.23.0
    scipy>=1.9.0
    scikit-learn>=1.2.0
    matplotlib>=3.6.0
    seaborn>=0.12.0
    pytest>=7.2.0
python_requires = >=3.8

[options.entry_points]
console_scripts =
    neorank-train = neorank.cli:train_main
    neorank-predict = neorank.cli:predict_main

[flake8]
max-line-length = 88
extend-ignore = E203
